# AutoAnalyst-MA

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
src/autoanalyst_ma/: __init__.py  agents.py  api.py  main.py  models.py  pipeline.py  reporting.py  schemas.py  service.py  storage.py  ui.py
tests/: test_pipeline.py  test_service.py  test_storage_and_api.py  test_ui_helpers.py
